Java 11 update, fix textures not loading after save loading. Refactors